--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -910,3 +910,18 @@ a.btn-cta {
   width: 50px;
   height: 50px;
 }
+.intro1{
+  color: #fff;
+    font-size: 16px;
+    max-width: 760px;
+    margin: 0 auto;
+    margin-bottom: 10px;
+}
+.instruction{
+  color: aqua;
+  background: rgb(255,255,0);
+background: linear-gradient(45deg, rgba(255,255,0,1) 0%, rgba(255,0,219,1) 100%);
+}
+.link{
+  color: white;
+}
