--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -910,6 +910,10 @@ a.btn-cta {
   width: 50px;
   height: 50px;
 }
+.social-media-logo{
+  width: 30px;
+  height: 30px;
+}
 .intro1{
   color: #fff;
     font-size: 16px;
