--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -907,8 +907,8 @@ a.btn-cta {
   height: 50px;
 }
 .social-logo{
-  width: 50px;
-  height: 50px;
+  width: 25px;
+  height: 25px;
 }
 .social-media-logo{
   width: 30px;
@@ -928,4 +928,20 @@ background: linear-gradient(45deg, rgba(255,255,0,1) 0%, rgba(255,0,219,1) 100%)
 }
 .link{
   color: white;
+}
+.button{
+  background-color: #9dfc03;
+  border-color: #9dfc03;
+  border-radius: 45px;
+  border: 0px;
+  width: 300px;
+  height: 50px;
+  color: #ffffff;
+  transition: 1s;
+}
+.button:hover{
+  background-color: #81d100;
+  color:  #fff;
+  border: 2px;
+  border-color: #81d100;
 }
